Set text color to stay contrasted on hover

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -80,6 +80,11 @@ html[data-theme='dark'] {
   margin-right: 1rem;
 }
 
+.navbar__brand:hover,
+.navbar__brand:focus {
+  color: var(--spectra-colors-white);
+}
+
 .main-wrapper {
   padding-top: 2rem;
 }
