--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -95,3 +95,14 @@ html[data-theme='dark'] {
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+/* Pagination styling */
+.pagination-nav__sublabel {
+  display: none;
+}
+
+.pagination-nav__link {
+  border: 0px;
+  border-top: 1px solid var(--ifm-color-emphasis-300);
+  border-radius: 0;
+}
