--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -177,6 +177,38 @@ html[data-theme='dark'] .DocSearch {
 }
 
 /* Table Styling */
-tbody {
-  word-break: break-word;
+table {
+  border: solid 1px var(--ifm-table-border-color);
+}
+
+table tr th:first-child, table tr td:first-child {
+  border-left: none;
+}
+
+table tr th:last-child, table tr td:last-child {
+  border-right: none;
+}
+
+table tr:last-child td {
+  border-bottom: none;
+}
+
+table td {
+  min-width: 225px;
+}
+
+table::-webkit-scrollbar {
+  -webkit-appearance: none;
+  height: 7px;
+}
+
+table::-webkit-scrollbar-track {
+  background-color: var(--spectra-colors-gray-100);
+  border-top: solid 1px var(--ifm-table-border-color);
+}
+
+table::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-color: var(--ifm-table-border-color);
+  -webkit-box-shadow: 0 0 1px var(--ifm-table-border-color);
 }
