--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,7 +7,7 @@
 
 /* You can override the default Infima variables here. */
 
-@import '~@fontsource/inter';
+@import "~@fontsource/inter";
 
 :root {
   --spectra-colors-black: #1a1c1f;
@@ -116,7 +116,7 @@
   --ifm-font-family-base: Inter, sans-serif;
 }
 
-html[data-theme='dark'] {
+html[data-theme="dark"] {
   --ifm-background-color: var(--spectra-colors-gray-900);
 
   --ifm-navbar-link-color: var(--spectra-colors-white);
@@ -127,12 +127,21 @@ html[data-theme='dark'] {
 }
 
 .navbar {
-  background-image: linear-gradient(to right, var(--spectra-colors-black), #2e1f51 80%);
+  background-image: linear-gradient(
+    to right,
+    var(--spectra-colors-black),
+    #2e1f51 80%
+  );
 }
 
 .navbar__logo {
+  align-items: center;
+  display: flex;
+}
+
+.navbar__logo img {
   height: 140%;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
 }
 
 .navbar__brand:hover,
@@ -167,23 +176,26 @@ html[data-theme='dark'] {
 }
 
 /* Color Mode Toggle Switch */
-html .react-toggle-track {
+html
+  .toggleTrack_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
   background-color: var(--spectra-colors-purple-700);
   width: 54px;
 }
 
-.react-toggle {
+.toggle_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
   border: solid 2px var(--spectra-colors-purple-700);
   border-radius: 100px;
   color: white;
   font-size: 24px;
 }
 
-html[data-theme='dark'] .react-toggle .react-toggle-thumb, .react-toggle--checked .react-toggle-thumb {
+html[data-theme="dark"] .react-toggle .react-toggle-thumb,
+.react-toggle--checked .react-toggle-thumb {
   left: 31px;
 }
 
-html .react-toggle-thumb {
+html
+  .toggleTrackThumb_node_modules-\@docusaurus-theme-classic-lib-next-theme-Toggle-styles-module {
   background-color: var(--spectra-colors-purple-200);
 }
 
@@ -210,13 +222,13 @@ html .DocSearch-Button-Key {
 }
 
 html .DocSearch-Button-Placeholder {
-  font-size: .85rem;
+  font-size: 0.85rem;
 }
 html .DocSearch-Button .DocSearch-Search-Icon {
   color: var(--spectra-colors-gray-800);
 }
 
-html[data-theme='dark'] .DocSearch {
+html[data-theme="dark"] .DocSearch {
   --docsearch-searchbox-background: var(--ifm-color-secondary);
   --docsearch-searchbox-focus-background: var(--ifm-color-white);
   --docsearch-text-color: var(--spectra-colors-gray-800);
@@ -228,7 +240,11 @@ html[data-theme='dark'] .DocSearch {
 }
 
 .navbar-sidebar__brand {
-  background-image: linear-gradient(to right, var(--spectra-colors-black), #2e1f51 80%);
+  background-image: linear-gradient(
+    to right,
+    var(--spectra-colors-black),
+    #2e1f51 80%
+  );
 }
 
 /* Table Styling */
@@ -236,11 +252,13 @@ table {
   border: solid 1px var(--ifm-table-border-color);
 }
 
-table tr th:first-child, table tr td:first-child {
+table tr th:first-child,
+table tr td:first-child {
   border-left: none;
 }
 
-table tr th:last-child, table tr td:last-child {
+table tr th:last-child,
+table tr td:last-child {
   border-right: none;
 }
 
